# wpolybool

./: CMakeLists.txt  LICENSE  README-CN.md  README.md  build.sh
demo/: main.cpp
include/: wbool.h  wpoly.h
src/: WGArc2d.cpp  WGArc2d.h  WGBasicAlgorithm.cpp  WGBasicAlgorithm.h  WGBooleanOperator2d.cpp  WGBooleanOperator2d.h  WGBox2d.cpp  WGBox2d.h  WGBox3d.cpp  WGBox3d.h  WGCurve2d.cpp  WGCurve2d.h  WGCurveIntersecter2d.cpp  WGCurveIntersecter2d.h  WGEdge2d.cpp  WGEdge2d.h  WGIntegration.cpp  WGIntegration.h  WGIntersectHelper2d.cpp  WGIntersectHelper2d.h  WGLine2d.cpp  WGLine2d.h  WGLoop2d.cpp  WGLoop2d.h  WGMatrix4x4.cpp  WGMatrix4x4.h  WGNurbs.h  WGNurbsCurve2d.cpp  WGNurbsCurve2d.h  WGObject.cpp  WGObject.h  WGObject2d.cpp  WGObject2d.h  WGPointPolygonPosition2d.cpp  WGPointPolygonPosition2d.h  WGPolygon.cpp  WGPolygon.h  WGQuaternion.cpp  WGQuaternion.h  WGTopoHelper2d.cpp  (+10 more)
thirdpart/wsolver/include/: wsbasis.h  wsolver.h
thirdpart/wsolver/lib/: wsolver.lib
